--- a/app/assets/stylesheets/modules-tables.css.scss
+++ b/app/assets/stylesheets/modules-tables.css.scss
@@ -19,7 +19,7 @@
 
 .scroll-wrapper {
   position: relative;
-  overflow: hidden;
+  overflow: visible;
 }
 .table-wrapper {
   position: relative;
